tests/paczka1/fuzzy1/35294386.err
Error in line 5: xiH A446 22,7
Error in line 13: 0bJBLOb1H A700 10,5
Error in line 12: NhykvtyiJ A700 44,4
Error in line 17: NhykvtyiJ S436 44,7
Error in line 25: xiH S117 49,7
Error in line 32: A446 A700 75,75
Error in line 30: dBoaQdoEDp S117 19,3
Error in line 15: 0bJBLOb1H S436 73,6
